[gd_scene load_steps=78 format=2]

[ext_resource path="res://layout_elements/HealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://layout_elements/BarrelThrowingEnemy/BarrelThrowingEnemy.gd" type="Script" id=2]
[ext_resource path="res://assets/BarrelThrowingEnemy/throwRight.png" type="Texture" id=3]
[ext_resource path="res://assets/BarrelThrowingEnemy/standLeft.png" type="Texture" id=4]
[ext_resource path="res://assets/BarrelThrowingEnemy/throwLeft.png" type="Texture" id=5]
[ext_resource path="res://layout_elements/BarrelThrowingEnemy/barrel.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/BarrelThrowingEnemy/standRight.png" type="Texture" id=7]
[ext_resource path="res://assets/BarrelThrowingEnemy/deadLeft.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 65, 38 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 8 )
region = Rect2( 65, 0, 65, 38 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 8 )
region = Rect2( 130, 0, 65, 38 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 8 )
region = Rect2( 195, 0, 65, 38 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 8 )
region = Rect2( 260, 0, 65, 38 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 8 )
region = Rect2( 325, 0, 65, 38 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 8 )
region = Rect2( 390, 0, 65, 38 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 8 )
region = Rect2( 455, 0, 65, 38 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 8 )
region = Rect2( 520, 0, 65, 38 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 448, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 576, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 704, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 320, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 448, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 512, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 576, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 640, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 704, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 768, 0, 64, 44 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 7 )
region = Rect2( 320, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 7 )
region = Rect2( 384, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 7 )
region = Rect2( 448, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 7 )
region = Rect2( 512, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 7 )
region = Rect2( 576, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 7 )
region = Rect2( 640, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 7 )
region = Rect2( 704, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 7 )
region = Rect2( 768, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 7 )
region = Rect2( 832, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 7 )
region = Rect2( 896, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 4 )
region = Rect2( 448, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 4 )
region = Rect2( 576, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 4 )
region = Rect2( 704, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 4 )
region = Rect2( 768, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 4 )
region = Rect2( 832, 0, 64, 40 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 4 )
region = Rect2( 896, 0, 64, 40 )

[sub_resource type="SpriteFrames" id=57]
animations = [ {
"frames": [ SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ) ],
"loop": false,
"name": "dieLeft",
"speed": 10.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "throwRight",
"speed": 10.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": false,
"name": "throwLeft",
"speed": 10.0
}, {
"frames": [ SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ) ],
"loop": true,
"name": "standRight",
"speed": 8.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "standLeft",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=58]
extents = Vector2( 39.3567, 76.9229 )

[sub_resource type="RectangleShape2D" id=74]
extents = Vector2( 50, 88 )

[sub_resource type="RectangleShape2D" id=84]
extents = Vector2( 61, 27 )

[node name="BarrelThrowingEnemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 73
script = ExtResource( 2 )
barrel_scene = ExtResource( 6 )
barrel_spawn_path = NodePath("barrel_spawn")
barrel_angle = 180.0

[node name="HealthBar" parent="." instance=ExtResource( 1 )]
margin_left = 1.21924
margin_top = -111.651
margin_right = 1.21924
margin_bottom = -111.651

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 2.88123, 11.8949 )
scale = Vector2( 4.82272, 8.03602 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.10371, -1.11743 )
scale = Vector2( 4.60927, 4.60927 )
frames = SubResource( 57 )
animation = "dieLeft"
frame = 8
playing = true
offset = Vector2( -0.468745, 0.847518 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.3567, 11.8094 )
shape = SubResource( 58 )

[node name="barrel_spawn" type="Position2D" parent="."]
position = Vector2( 0, -84.2106 )

[node name="BarrelTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DamageDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageDetection"]
position = Vector2( -4, 10 )
shape = SubResource( 74 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="LeftDeathCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -62, 61 )
shape = SubResource( 84 )
disabled = true
[connection signal="health" from="." to="HealthBar" method="_on_Player_health"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
[connection signal="timeout" from="BarrelTimer" to="." method="_on_BarrelTimeout_timeout"]
[connection signal="body_entered" from="DamageDetection" to="." method="_on_DamageDetection_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
